--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
-flask
-gunicorn
+Flask==0.11.1
+passlib==1.7.0
+SQLAlchemy==1.1.5
+Werkzeug==0.11.15
+gunicorn==19.0.0
+gevent==1.2.1
 opencv-contrib-python-headless
